// Original file: proto/events.proto


export interface EventoTopResponse {
  'FechaOriginal'?: (string);
  'Hora'?: (string);
  'CodigoEvento'?: (string);
  'CodigoAlarma'?: (string);
  'DescripcionAlarm'?: (string);
  'CodigoZona'?: (string);
  'DescripcionZona'?: (string);
  'CodigoUsuario'?: (string);
  'NombreUsuario'?: (string);
  'DescripcionEvent'?: (string);
  'Particion'?: (number);
}

export interface EventoTopResponse__Output {
  'FechaOriginal'?: (string);
  'Hora'?: (string);
  'CodigoEvento'?: (string);
  'CodigoAlarma'?: (string);
  'DescripcionAlarm'?: (string);
  'CodigoZona'?: (string);
  'DescripcionZona'?: (string);
  'CodigoUsuario'?: (string);
  'NombreUsuario'?: (string);
  'DescripcionEvent'?: (string);
  'Particion'?: (number);
}
